Bug 113223 - "Always on top" status stored, but not set on startup
Summary: "Always on top" status stored, but not set on startup
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Michael Brade
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-09-24 16:16 UTC by Kevin Goeser
Modified: 2006-01-07 22:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Goeser 2005-09-24 16:16:28 UTC
Version:           3.5 (using KDE KDE 3.4.2)
Installed from:    Gentoo Packages
Compiler:          gcc 3.3.5 
OS:                Linux

The status "always on top" is saved and restored when logging off and in again (the button in the menu indicates it). However, the note doesn't stay on top, you need to reactivate the state.
Comment 1 Michael Brade 2006-01-07 22:41:50 UTC
SVN commit 495357 by brade:

Fixed #113223: actually set the "Keep Above/Below" bit when creating a
note on startup.

I wondered what the hell was going on for too long (I couldn't disable the
"Keep Above" flag anymore) until Tobias pointed me to commit #465269....

Will also be fixed for KDE 3.5.1.

BUG: 113223



 M  +2 -0      ChangeLog  
 M  +2 -1      knote.cpp  


--- branches/KDE/3.5/kdepim/knotes/ChangeLog #495356:495357
@@ -6,6 +6,8 @@
     * fixed #103780: separate "Clear" action visually from Cut/Copy/Paste
       since it's not doing anything with the clipboard
     * fixed #110672: added a "Do not show again" box to the delete note dialog
+    * fixed #113223: actually set the "Keep Above/Below" bit when creating a
+      note on startup
 
 2006/01/06  Michael Brade <brade@kde.org>
 
--- branches/KDE/3.5/kdepim/knotes/knote.cpp #495356:495357
@@ -1,7 +1,7 @@
 /*******************************************************************
  KNotes -- Notes for the KDE project
 
- Copyright (c) 1997-2005, The KNotes Developers
+ Copyright (c) 1997-2006, The KNotes Developers
 
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
@@ -351,6 +351,7 @@
         m_keepAbove->setChecked( false );
         m_keepBelow->setChecked( false );
     }
+    slotUpdateKeepAboveBelow();
 
     // HACK: update the icon color - again after showing the note, to make kicker aware of the new colors
     KIconEffect effect;