Fixed #113223: actually set the "Keep Above/Below" bit when creating a note on startup.

I wondered what the hell was going on for too long (I couldn't disable the
"Keep Above" flag anymore) until Tobias pointed me to commit #465269....

Will also be fixed for KDE 3.5.1.

BUG: 113223


svn path=/branches/KDE/3.5/kdepim/; revision=495357